Zed Makefile config

--- a/private_dot_config/zed/private_settings.json
+++ b/private_dot_config/zed/private_settings.json
@@ -235,6 +235,9 @@
         },
         "Rainbow CSV": {
             "soft_wrap": "editor_width"
+        },
+        "Make": {
+            "hard_tabs": true
         }
     }
 }
