VSCode format on save

--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -108,7 +108,7 @@
   "editor.autoClosingQuotes": "beforeWhitespace",
   "editor.tabCompletion": "on",
   "editor.formatOnPaste": false,
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
   "editor.minimap.enabled": true,
   "editor.minimap.renderCharacters": true,
   "editor.minimap.maxColumn": 100,
