--- a/private_dot_config/zed/private_settings.json
+++ b/private_dot_config/zed/private_settings.json
@@ -9,6 +9,7 @@
 {
     "autosave": "on_window_change",
     "auto_update": true,
+    "auto_signature_help": true,
     "always_treat_brackets_as_autoclosed": false,
 
     "buffer_font_family": "Roboto Mono",
@@ -81,7 +82,7 @@
 
     "format_on_save": "on",
 
-    "use_autoclose": true,
+    "use_autoclose": false,
     "use_auto_surround": true,
 
     "git": {
