--- a/private_dot_config/zed/private_settings.json
+++ b/private_dot_config/zed/private_settings.json
@@ -9,7 +9,7 @@
 {
     "autosave": "on_window_change",
     "auto_update": true,
-    "auto_signature_help": true,
+    "auto_signature_help": false,
     "always_treat_brackets_as_autoclosed": false,
 
     "buffer_font_family": "Roboto Mono",
@@ -50,7 +50,7 @@
         "git_status": true
     },
     "telemetry": {
-        "diagnostics": true,
+        "diagnostics": false,
         "metrics": false
     },
     "terminal": {
