Disable JSX auto-closing

--- a/private_dot_config/zed/private_settings.json
+++ b/private_dot_config/zed/private_settings.json
@@ -35,6 +35,10 @@
         }
     },
 
+    "jsx_tag_auto_close": {
+        "enabled": false
+    },
+
     "scrollbar": {
         "show": "auto",
         "cursors": true,
