--- a/private_dot_config/zed/private_settings.json
+++ b/private_dot_config/zed/private_settings.json
@@ -199,10 +199,7 @@
             "hard_tabs": true
         },
         "Go": {
-            "language_servers": [
-                "gopls",
-                "golangci-lint"
-            ]
+            "language_servers": ["gopls", "golangci-lint"]
         }
     },
     "lsp": {
