Zed: disable inlay hints

--- a/private_dot_config/zed/private_settings.json
+++ b/private_dot_config/zed/private_settings.json
@@ -118,7 +118,7 @@
         "coloring": "fixed"
     },
     "inlay_hints": {
-        "enabled": true
+        "enabled": false
     },
 
     "hard_tabs": false,
