Conflicting docker compose LSP

--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -438,4 +438,5 @@
   "yaml.format.enable": true,
   "yaml.validate": true,
   "diffEditor.ignoreTrimWhitespace": false,
+  "docker.extension.enableComposeLanguageServer": false,
 }
