--- a/private_dot_config/zed/private_settings.json
+++ b/private_dot_config/zed/private_settings.json
@@ -306,6 +306,7 @@
         "html": true,
         "lua": true,
         "make": true,
+        "rainbow-csv": true,
         "sql": true,
         "svelte": true,
         "templ": true,
