VSCode settings update

--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -439,4 +439,7 @@
   "yaml.validate": true,
   "diffEditor.ignoreTrimWhitespace": false,
   "docker.extension.enableComposeLanguageServer": false,
+  "[github-actions-workflow]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml"
+  },
 }
