--- a/private_dot_config/zed/private_settings.json
+++ b/private_dot_config/zed/private_settings.json
@@ -15,7 +15,7 @@
 
     "buffer_font_family": "Roboto Mono",
     "buffer_font_features": {
-        "liga": false
+        "liga": false,
     },
     "buffer_font_size": 12,
     "buffer_font_weight": 400,
@@ -32,12 +32,12 @@
             "update_debounce_ms": 200,
             "padding": 4,
             "min_column": 0,
-            "max_severity": null
-        }
+            "max_severity": null,
+        },
     },
 
     "jsx_tag_auto_close": {
-        "enabled": false
+        "enabled": false,
     },
 
     "scrollbar": {
@@ -46,10 +46,10 @@
         "diagnostics": "all",
         "git_diff": true,
         "search_results": true,
-        "selected_symbol": true
+        "selected_symbol": true,
     },
     "sticky_scroll": {
-        "enabled": true
+        "enabled": true,
     },
     "show_completions_on_input": true,
     "show_whitespaces": "selection",
@@ -58,16 +58,16 @@
     "tab_size": 4,
     "tab_bar": {
         "show": true,
-        "show_nav_history_buttons": false
+        "show_nav_history_buttons": false,
     },
     "tabs": {
         "close_position": "right",
         "file_icons": false,
-        "git_status": true
+        "git_status": true,
     },
     "telemetry": {
         "diagnostics": false,
-        "metrics": false
+        "metrics": false,
     },
     "terminal": {
         "alternate_scroll": "off",
@@ -75,14 +75,14 @@
         "blinking": "off",
         "button": true,
         "copy_on_select": false,
-        "working_directory": "current_project_directory"
+        "working_directory": "current_project_directory",
     },
 
     "theme": "Zed Legacy: Atelier Cave Dark",
     "icon_theme": {
         "mode": "dark",
         "dark": "Zed (Default)",
-        "light": "Zed (Default)"
+        "light": "Zed (Default)",
     },
 
     "experimental.theme_overrides": {
@@ -90,14 +90,14 @@
         "editor.document_highlight.bracket_background": "#586cda5d",
         "syntax": {
             "comment": {
-                "color": "#5F8B3B"
-            }
-        }
+                "color": "#5F8B3B",
+            },
+        },
     },
     "toolbar": {
         "breadcrumbs": true,
         "quick_actions": true,
-        "selections_menu": true
+        "selections_menu": true,
     },
 
     "enable_language_server": true,
@@ -111,25 +111,25 @@
     "git": {
         "git_gutter": "tracked_files",
         "inline_blame": {
-            "enabled": true
-        }
+            "enabled": true,
+        },
     },
 
     "indent_guides": {
         "enabled": true,
         "active_line_width": 2,
         "background_coloring": "disabled",
-        "coloring": "fixed"
+        "coloring": "fixed",
     },
     "inlay_hints": {
-        "enabled": false
+        "enabled": false,
     },
 
     "hard_tabs": false,
     "hover_popover_enabled": true,
 
     "journal": {
-        "hour_format": "hour24"
+        "hour_format": "hour24",
     },
 
     "show_wrap_guides": true,
@@ -139,7 +139,7 @@
     "preview_tabs": {
         "enabled": true,
         "enable_preview_from_file_finder": false,
-        "enable_preview_from_code_navigation": false
+        "enable_keep_preview_on_code_navigation": false,
     },
     "project_panel": {
         "button": true,
@@ -150,17 +150,17 @@
         "auto_fold_dirs": true,
         "indent_size": 12,
         "scrollbar": {
-            "show": "never"
+            "show": "never",
         },
         "file_icons": true,
-        "folder_icons": true
+        "folder_icons": true,
     },
 
     "remove_trailing_whitespace_on_save": true,
 
     "vim_mode": true,
     "vim": {
-        "use_system_clipboard": "on_yank"
+        "use_system_clipboard": "on_yank",
     },
     "relative_line_numbers": "enabled",
 
@@ -168,53 +168,53 @@
     "ui_font_size": 12,
     "ui_font_family": "Intel One Mono",
     "features": {
-        "edit_prediction_provider": "supermaven"
+        "edit_prediction_provider": "supermaven",
     },
     "show_edit_predictions": true,
 
     "languages": {
         "JavaScript": {
             "code_actions_on_format": {
-                "source.fixAll.eslint": true
-            }
+                "source.fixAll.eslint": true,
+            },
         },
         "TypeScript": {
             "code_actions_on_format": {
-                "source.fixAll.eslint": true
-            }
+                "source.fixAll.eslint": true,
+            },
         },
         "TSX": {
             "code_actions_on_format": {
-                "source.fixAll.eslint": true
-            }
+                "source.fixAll.eslint": true,
+            },
         },
         "Vue.js": {
             "code_actions_on_format": {
-                "source.fixAll.eslint": true
-            }
+                "source.fixAll.eslint": true,
+            },
         },
         "Svelte": {
             "code_actions_on_format": {
-                "source.fixAll.eslint": true
-            }
+                "source.fixAll.eslint": true,
+            },
         },
         "CSV": {
-            "soft_wrap": "editor_width"
+            "soft_wrap": "editor_width",
         },
         "Make": {
-            "hard_tabs": true
+            "hard_tabs": true,
         },
         "Go": {
-            "language_servers": ["gopls", "golangci-lint"]
+            "language_servers": ["gopls", "golangci-lint"],
         },
         "SQL": {
             "formatter": {
                 "external": {
                     "command": "sql-formatter",
-                    "arguments": ["--language", "postgresql"]
-                }
-            }
-        }
+                    "arguments": ["--language", "postgresql"],
+                },
+            },
+        },
     },
     "lsp": {
         "gopls": {
@@ -226,9 +226,9 @@
                     "functionTypeParameters": true,
                     "parameterNames": true,
                     "constantValues": true,
-                    "rangeVariableTypes": true
-                }
-            }
+                    "rangeVariableTypes": true,
+                },
+            },
         },
         "golangci-lint": {
             "initialization_options": {
@@ -237,9 +237,9 @@
                     "run",
                     "--output.json.path=stdout",
                     "--issues-exit-code=1",
-                    "--show-stats=false"
-                ]
-            }
+                    "--show-stats=false",
+                ],
+            },
         },
         "vtsls": {
             "settings": {
@@ -247,52 +247,52 @@
                     "inlayHints": {
                         "parameterNames": {
                             "enabled": false,
-                            "suppressWhenArgumentMatchesName": false
+                            "suppressWhenArgumentMatchesName": false,
                         },
                         "parameterTypes": {
-                            "enabled": false
+                            "enabled": false,
                         },
                         "variableTypes": {
                             "enabled": false,
-                            "suppressWhenTypeMatchesName": true
+                            "suppressWhenTypeMatchesName": true,
                         },
                         "propertyDeclarationTypes": {
-                            "enabled": false
+                            "enabled": false,
                         },
                         "functionLikeReturnTypes": {
-                            "enabled": false
+                            "enabled": false,
                         },
                         "enumMemberValues": {
-                            "enabled": false
-                        }
-                    }
+                            "enabled": false,
+                        },
+                    },
                 },
                 "typescript": {
                     "inlayHints": {
                         "parameterNames": {
                             "enabled": false,
-                            "suppressWhenArgumentMatchesName": false
+                            "suppressWhenArgumentMatchesName": false,
                         },
                         "parameterTypes": {
-                            "enabled": false
+                            "enabled": false,
                         },
                         "variableTypes": {
                             "enabled": false,
-                            "suppressWhenTypeMatchesName": true
+                            "suppressWhenTypeMatchesName": true,
                         },
                         "propertyDeclarationTypes": {
-                            "enabled": false
+                            "enabled": false,
                         },
                         "functionLikeReturnTypes": {
-                            "enabled": false
+                            "enabled": false,
                         },
                         "enumMemberValues": {
-                            "enabled": false
-                        }
-                    }
-                }
-            }
-        }
+                            "enabled": false,
+                        },
+                    },
+                },
+            },
+        },
     },
 
     // Extensions
@@ -311,9 +311,10 @@
         "sql": true,
         "svelte": true,
         "templ": true,
+        "terraform": true,
         "toml": true,
         "vue": true,
         "wakatime": true,
-        "zed-legacy-themes": true
-    }
+        "zed-legacy-themes": true,
+    },
 }
